Add files/directory move and rename and small additions to mock
