# areas/backend/controller/data_store_controller.py
@@ -35,6 +35,12 @@ class DataStoreController:
     def search_in_cloud(self, user_mail: str, file_name: str) -> list[tuple[BaseStorageItem, str]]:
         return self.data_store_service.search_in_cloud(user_mail, file_name)
 
+    def rename_item(self, item_id: UUID, new_name: str):
+        return self.data_store_service.rename_item_by_id(item_id=item_id, user_mail='test', new_name=new_name)
+
+    def move_item(self, item_id: UUID, target_directory_id: UUID):
+        return self.data_store_service.move_item(item_id=item_id, user_mail='test', target_directory_id=target_directory_id)
+
     """
         ==============
         Access Service
