# areas/backend/static/swagger.json
@@ -325,6 +325,80 @@
           }
         }
       }
+    },
+    "/rename/{item_id}": {
+      "put": {
+        "parameters": [
+          {
+            "name": "item_id",
+            "in": "path",
+            "description": "File or directory to rename",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "new_name",
+            "in": "query",
+            "description": "New item name",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "tags": [
+          "UserRequest"
+        ],
+        "summary": "to do",
+        "responses": {
+          "400": {
+            "description": "Failed. Bad put data"
+          },
+          "404": {
+            "description": "Item not found"
+          },
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/move/{item_id}": {
+      "put": {
+        "parameters": [
+          {
+            "name": "item_id",
+            "in": "path",
+            "description": "File or directory to move",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "target_directory",
+            "in": "query",
+            "description": "New target directory",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "tags": [
+          "UserRequest"
+        ],
+        "summary": "to do",
+        "responses": {
+          "400": {
+            "description": "Failed. Bad put data"
+          },
+          "404": {
+            "description": "Items not found"
+          },
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   },
   "components": {
